infrastructure/grafana/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-grafana-https-middleware
spec:
  redirectScheme:
    scheme: https
    permanent: true
