infrastructure/grafana/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: grafana-grafana-http-https-middleware@kubernetescrd
spec:
  tls:
    - hosts:
        - grafana.tryrocket.cloud
      secretName: tryrocket-cloud-http-tls
  rules:
    - host: grafana.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
